--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -8,7 +8,7 @@
         </view>
     </i-panel>
     <i-panel title="选择菜单">
-        <form bindsubmit="formSubmit" bindreset="formReset">
+        <form bindsubmit="formSubmit1" bindreset="formReset">
             <!-- 快捷选择食物 -->
             <view class="section">
                 <!-- <view class="section__title"></view> -->
@@ -17,6 +17,8 @@
                 </picker>
                 <button size="mini" class="pickFood_button" formType="submit">pick!</button>
             </view>
+        </form>
+        <form bindsubmit="formSubmit2" bindreset="formReset">
             <!-- 手动添加食物 -->
             <view class="newAdd">
                 <input class="useradd-input" name="newsfood" maxlength="10" placeholder="手动输入(最大长度为10)" confirm-type="done" />
