完成随机选取最终幸运食物功能

--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -31,4 +31,7 @@
             <text>{{pickFood.name}}</text>
         </view>
     </i-panel>
+    <button class="getLucky_button"  bindtap="getLuckyFood">
+        冲冲冲
+    </button>
 </view>
