--- a/miniprogram/app.wxss
+++ b/miniprogram/app.wxss
@@ -1,3 +1,4 @@
 page,view,image,swiper,swiper-item,navigator,video{
   box-sizing: border-box;
+  font-family: "Arial","Microsoft YaHei","黑体","宋体",sans-serif;
 }
