--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -1,6 +1,7 @@
 .container{
     display: flex;
     height: 800rpx;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
