--- a/miniprogram/pages/market/market.wxml
+++ b/miniprogram/pages/market/market.wxml
@@ -1,16 +1,20 @@
-<!--pages/market/market.wxml-->
+<!-- pages/market/market.wxml -->
 <view class="container" hover-class="none" hover-stop-propagation="false">
-    <map id="myMap" style="width: 100%; height: 600rpx;" 
-    show-location
-    show-scale
-    bindcontroltap="controltap"
-    longitude="{{longitude}}" 
-    latitude="{{latitude}}" 
-    scale="{{scale}}" 
-    markers="{{markers}}"></map>
-
-    <view class="messageTip_button">
-        <button bindtap="shouquan" type="warn">请点击按钮订阅消息提醒</button>
-        <button bindtap="getOpenidToSendMsg">获取用户的openid并推送消息</button>
+    <map id="myMap" style="width: 100%; height: 600rpx;" show-location show-scale bindcontroltap="controltap" longitude="{{longitude}}" latitude="{{latitude}}" scale="{{scale}}" markers="{{markers}}"></map>
+    <view class="messageTip">
+        <form report-submit="true" bindsubmit="formSubmit" bindreset="formReset">
+            <view class="picker-content">
+                <view class="picker-name">选择年月日</view>
+                <picker mode="date" value="{{date}}" start="2020-01-01" end="2030-01-01" bindchange="changeDate">
+                    <view class="tui-picker-detail">日期 {{date}}</view>
+                </picker>
+                <view class="picker-name">选择时分</view>
+                <picker mode="time" value="{{time}}" start="06:00" end="22:30" bindchange="changeTime">
+                    <view class="tui-picker-detail">上课时间 {{time}}</view>
+                </picker>
+                <input class="course" />
+            </view>
+            <button formType="submit" bindtap="shouquan" type="primary">提交表单</button>
+        </form>
     </view>
 </view>
