--- a/miniprogram/pages/market/market.wxml
+++ b/miniprogram/pages/market/market.wxml
@@ -1,6 +1,6 @@
 <!-- pages/market/market.wxml -->
 <view class="container" hover-class="none" hover-stop-propagation="false">
-    <!-- <map id="myMap" style="width: 100%; height: 600rpx;" show-location show-scale bindcontroltap="controltap" longitude="{{longitude}}" latitude="{{latitude}}" scale="{{scale}}" markers="{{markers}}"></map> -->
+    <map id="myMap" style="width: 100%; height: 600rpx;" show-location show-scale bindcontroltap="controltap" bindmarkertap="markertap" longitude="{{longitude}}" latitude="{{latitude}}" scale="{{scale}}" markers="{{markers}}"></map>
     <view class="messageTip">
         <form report-submit="true" bindsubmit="formSubmit" bindreset="formReset">
             <view class="input-content">
@@ -10,13 +10,13 @@
                 </i-panel>
             </view>
             <view class="picker-content">
-                <view class="picker-name">选择年月日</view>
+                <view class="picker-name">日期</view>
                 <picker mode="date" value="{{date}}" start="2020-01-01" end="2030-01-01" bindchange="changeDate">
-                    <view class="tui-picker-detail">日期 {{date}}</view>
+                    <view class="tui-picker-detail"> {{date}}</view>
                 </picker>
-                <view class="picker-name">选择时分</view>
+                <view class="picker-name">上课时间</view>
                 <picker mode="time" value="{{time}}" start="06:00" end="22:30" bindchange="changeTime">
-                    <view class="tui-picker-detail">上课时间 {{time}}</view>
+                    <view class="tui-picker-detail"> {{time}}</view>
                 </picker>
             </view>
             <button formType="submit" bindtap="shouquan" type="primary">提交表单</button>
