增加 ”添加标记点“ 功能

--- a/miniprogram/pages/market/market.wxss
+++ b/miniprogram/pages/market/market.wxss
@@ -15,3 +15,21 @@
     border: 0 solid #e9eaec;
     border-bottom-width: 1px;
 }
+
+
+/* 添加标记点 */
+.add_marker_view{
+    position:fixed;
+    top:500rpx;
+    left:10rpx;
+    z-index:999;
+    text-align: center;
+}
+.add_marker_img{
+    width: 60rpx;
+    height: 60rpx;
+}
+.add_marker_view_view{
+    font-size: 20rpx;
+    background-color: #fff;
+}
