--- a/miniprogram/pages/market/market.wxml
+++ b/miniprogram/pages/market/market.wxml
@@ -1,23 +1,27 @@
 <!-- pages/market/market.wxml -->
 <view class="container" hover-class="none" hover-stop-propagation="false">
     <map id="myMap" style="width: 100%; height: 600rpx;" show-location show-scale bindcontroltap="controltap" bindmarkertap="markertap" longitude="{{longitude}}" latitude="{{latitude}}" scale="{{scale}}" markers="{{markers}}"></map>
+    <cover-view class="add_marker_view" scroll-top="0">
+        <cover-image class="add_marker_img" src="../../images/bj3.png" bindtap="addMarker"></cover-image>
+        <cover-view class="add_marker_view_view" scroll-top="0">添加标记</cover-view>
+    </cover-view>
     <view class="messageTip">
         <form report-submit="true" bindsubmit="formSubmit" bindreset="formReset">
             <view class="input-content">
                 <i-panel title="Where are you going?">
                     <i-input value="{{ course }}" type="text" title="课程名字" placeholder="请输入课程名字" />
-                    <i-input value="{{ address }}" type="text" title="位置" placeholder="请输入地址(最多20字)" maxlength="20" />
+                    <i-input value="{{ address }}" type="text" title="位置" placeholder="可双击地图中的标记点快速输入" maxlength="20" />
                     <i-input value="{{ room }}" type="text" title="教室" placeholder="请输入教室详细地址(最多15字)" maxlength="15" />
                 </i-panel>
             </view>
             <view class="picker-content">
                 <view class="picker-name">日期</view>
                 <picker mode="date" value="{{date}}" start="2020-01-01" end="2030-01-01" bindchange="changeDate">
-                    <view class="tui-picker-detail"> {{date}}</view>
+                    <view class="tui-picker-detail">{{date}}</view>
                 </picker>
                 <view class="picker-name">上课时间</view>
                 <picker mode="time" value="{{time}}" start="06:00" end="22:30" bindchange="changeTime">
-                    <view class="tui-picker-detail"> {{time}}</view>
+                    <view class="tui-picker-detail">{{time}}</view>
                 </picker>
             </view>
             <button formType="submit" bindtap="shouquan" type="primary">提交表单</button>
