完善了表单样式 及 修复了添加标记点的属性名错误的bug

--- a/miniprogram/pages/addMarker/addMarker.wxss
+++ b/miniprogram/pages/addMarker/addMarker.wxss
@@ -1,1 +1,10 @@
 /* pages/addMarker/addMarker.wxss */
+
+.add_input{
+    font-size: 28rpx;
+    padding: 20rpx 40rpx;
+}
+
+button{
+    margin-top: 30rpx;
+}
