--- a/miniprogram/pages/market/market.wxss
+++ b/miniprogram/pages/market/market.wxss
@@ -1,4 +1,17 @@
 /* pages/market/market.wxss */
+/* form表单 */
+.input-content{
+    padding: 10rpx 10rpx;
+    background-color: #fff;
+
+}
+.form_input{
+    padding: 20rpx 20rpx;
+    font-size: 30rpx;
+    background-color: #fff;
+    border: 0 solid #e9eaec;
+}
+
 /* 时间选择器 */
 .picker-content{
     padding: 10rpx 35rpx;
@@ -33,3 +46,4 @@
     font-size: 20rpx;
     background-color: #fff;
 }
+
