--- a/miniprogram/pages/addMarker/addMarker.wxml
+++ b/miniprogram/pages/addMarker/addMarker.wxml
@@ -1,7 +1,7 @@
 <view class="container">
     <map id="myMap" style="width: 100%; height: 600rpx;" show-location show-scale bindtap='mapclick' longitude="{{longitude}}" latitude="{{latitude}}" scale="{{scale}}"></map>
     <form bindsubmit="formSubmit" bindreset="formReset">
-        <i-panel title="请输入您的标记点信息">
+        <i-panel title="单击地图选好点后再输入您的标记点信息">
             <input class="add_input" bindinput="bindKeyInput" value="{{name}}" placeholder="请输入地址别名(最多20字)" maxlength="20" />
         </i-panel>
         <button formType="submit" type="primary">创建</button>
