--- a/miniprogram/pages/user/user.wxml
+++ b/miniprogram/pages/user/user.wxml
@@ -6,7 +6,7 @@
         <open-data type="userNickName"></open-data>
     </view>
     <view class="task_view" hover-class="none" hover-stop-propagation="false">
-        <i-card wx:for="{{tasks}}" wx:for-index="index" data-index="{{index}}" title="{{item.course}}" extra="取消提醒" bindtap="deleteTask">
+        <i-card wx:for="{{tasks}}" wx:for-index="index" data-index="{{index}}" title="{{item.course}}" extra="取消提醒" bindtap="deleteTip">
             <view slot="content">
                 <text class="task_text" selectable="false" space="false" decode="false">
                     时间：{{item.time}}
@@ -21,4 +21,7 @@
             <view slot="footer">{{item.date}}</view>
         </i-card>
     </view>
+    <i-modal title="删除确认" visible="{{ visible5 }}" actions="{{ actions5 }}" bind:click="delete">
+        <view>删除后无法恢复哦</view>
+    </i-modal>
 </view>
