--- a/miniprogram/pages/user/user.wxml
+++ b/miniprogram/pages/user/user.wxml
@@ -6,8 +6,8 @@
         <open-data type="userNickName"></open-data>
     </view>
     <view class="task_view" hover-class="none" hover-stop-propagation="false">
-        <i-card wx:for="{{tasks}}" wx:for-index="index" data-index="{{index}}" title="{{item.course}}" extra="取消提醒" bindtap="deleteTip">
-            <view slot="content">
+        <i-card class="task_card" wx:for="{{tasks}}" wx:for-index="index"  title="{{item.course}}" extra="点击卡片可取消提醒" >
+            <view slot="content" data-index="{{index}}" bindtap="deleteTip">
                 <text class="task_text" selectable="false" space="false" decode="false">
                     时间：{{item.time}}
                 </text>
