--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -1,13 +1,10 @@
 <view class="container">
-    <view class="main">
-        <navigator class="to_eat" url="/pages/eat/eat" hover-class="navigator-hover">
-            Let's go eat !
-        </navigator>
-        <navigator class="to_market" url="/pages/market/market" hover-class="navigator-hover">
-            I want to
-        </navigator>
-        <navigator class="to_random" url="/pages/random/random" hover-class="navigator-hover">
-            获取一个随机数
-        </navigator>
-    </view>
+  <view class="main">
+    <navigator class="to_market" url="/pages/market/market" hover-class="navigator-hover">
+      I Will
+    </navigator>
+    <navigator class="to_eat" url="/pages/eat/eat" hover-class="navigator-hover">
+      Eat
+    </navigator>
+  </view>
 </view>
