--- a/miniprogram/pages/eat/eat.wxml
+++ b/miniprogram/pages/eat/eat.wxml
@@ -3,7 +3,7 @@
         <!-- 已选食物 -->
         <view style="padding: 10rpx;" class="picks">
             <text class="noPicks" selectable="false" space="false" decode="false" wx:if="{{!picks.length}}">
-                请在下方选择食物
+                请在下方添加食物
             </text>
             <button wx:for="{{picks}}" type="primary" class="picks_button" size="mini" bindtap="delect" wx:for-index="index" data-index="{{index}}">
                 {{item.name}}
@@ -16,16 +16,16 @@
             <view class="section">
                 <!-- <view class="section__title"></view> -->
                 <picker bindchange="bindPickerChange" value="{{index}}" range="{{array}}" range-key="name" class="_picker">
-                    <view class="picker">当前选择：{{array[index].name}}</view>
+                    <view class="picker">{{array[index].name}}</view>
                 </picker>
-                <button size="mini" class="pick1_button" formType="submit">pick!</button>
+                <button size="mini" class="pick1_button" formType="submit">添加食物</button>
             </view>
         </form>
         <form bindsubmit="formSubmit2" bindreset="formReset">
             <!-- 手动添加食物 -->
             <view class="newAdd">
                 <input class="useradd-input" name="news" maxlength="10" placeholder="手动输入(最大长度为10)" confirm-type="done" value="{{value}}" />
-                <button size="mini" class="pick2_button" formType="submit">add pick</button>
+                <button size="mini" class="pick2_button" formType="submit">添加食物</button>
             </view>
         </form>
     </i-panel>
@@ -34,7 +34,5 @@
             <text>{{pick.name}}</text>
         </view>
     </i-panel>
-    <button class="getLucky_button"  bindtap="getLucky">
-        冲冲冲
-    </button>
+    <button class="getLucky_button" bindtap="getLucky">冲冲冲</button>
 </view>
