--- a/miniprogram/pages/market/market.wxml
+++ b/miniprogram/pages/market/market.wxml
@@ -1,30 +1,35 @@
 <!-- pages/market/market.wxml -->
 <view class="container" hover-class="none" hover-stop-propagation="false">
-    <map id="myMap" style="width: 100%; height: 600rpx;" show-location show-scale bindcontroltap="controltap" bindmarkertap="markertap" longitude="{{longitude}}" latitude="{{latitude}}" scale="{{scale}}" markers="{{markers}}"></map>
-    <cover-view class="add_marker_view" scroll-top="0">
-        <cover-image class="add_marker_img" src="../../images/bj2.png" bindtap="addMarker"></cover-image>
-        <cover-view class="add_marker_view_view" scroll-top="0">添加标记</cover-view>
+    <map id="myMap" style="width: 100%; height: 100vh;" show-location show-scale bindcontroltap="controltap" bindmarkertap="markertap" longitude="{{longitude}}" latitude="{{latitude}}" scale="{{scale}}" markers="{{markers}}">
+        <cover-view class="add_marker_view" scroll-top="0">
+            <cover-image class="add_marker_img" src="../../images/bj2.png" bindtap="addMarker"></cover-image>
+            <cover-view class="add_marker_view_view" scroll-top="0">添加标记</cover-view>
+        </cover-view>
+        <!-- 屏幕背景变暗的背景 -->
+        <cover-view class="coverview_screen" bindtap="hideModal" wx:if="{{showModalStatus}}"></cover-view>
+    </map>
+    <cover-view animation="{{animationData}}" class="coverview_box" wx:if="{{showModalStatus}}">
+        <view class="messageTip">
+            <form report-submit="true" bindsubmit="formSubmit" bindreset="formReset">
+                <view class="input-content">
+                    <i-panel title="Where are you going?">
+                        <input class="form_input" value="{{course}}" bindinput="bindKeyInput1" type="text" placeholder="请输入课程名字" />
+                        <input class="form_input" bindinput="bindKeyInput2" value="{{address}}" type="text" placeholder="可双击地图中的标记点快速输入地址" maxlength="20" />
+                        <input class="form_input" value="{{room}}" bindinput="bindKeyInput3" type="text" placeholder="请输入教室详细地址(最多15字)" maxlength="15" />
+                    </i-panel>
+                </view>
+                <view class="picker-content">
+                    <view class="picker-name">日期</view>
+                    <picker mode="date" value="{{date}}" start="2020-01-01" end="2030-01-01" bindchange="changeDate">
+                        <view class="tui-picker-detail">{{date}}</view>
+                    </picker>
+                    <view class="picker-name">上课时间</view>
+                    <picker mode="time" value="{{time}}" start="00:00" end="23:59" bindchange="changeTime">
+                        <view class="tui-picker-detail">{{time}}</view>
+                    </picker>
+                </view>
+                <button class="form_submit" formType="submit" type="primary">提交表单</button>
+            </form>
+        </view>
     </cover-view>
-    <view class="messageTip">
-        <form report-submit="true" bindsubmit="formSubmit" bindreset="formReset">
-            <view class="input-content">
-                <i-panel title="Where are you going?">
-                    <input class="form_input" value="{{course}}" bindinput="bindKeyInput1" type="text" placeholder="请输入课程名字" />
-                    <input class="form_input" bindinput="bindKeyInput2" value="{{address}}" type="text" placeholder="可双击地图中的标记点快速输入地址" maxlength="20" />
-                    <input class="form_input" value="{{room}}" bindinput="bindKeyInput3" type="text" placeholder="请输入教室详细地址(最多15字)" maxlength="15" />
-                </i-panel>
-            </view>
-            <view class="picker-content">
-                <view class="picker-name">日期</view>
-                <picker mode="date" value="{{date}}" start="2020-01-01" end="2030-01-01" bindchange="changeDate">
-                    <view class="tui-picker-detail">{{date}}</view>
-                </picker>
-                <view class="picker-name">上课时间</view>
-                <picker mode="time" value="{{time}}" start="00:00" end="23:59" bindchange="changeTime">
-                    <view class="tui-picker-detail">{{time}}</view>
-                </picker>
-            </view>
-            <button class="form_submit" formType="submit" type="primary">提交表单</button>
-        </form>
-    </view>
 </view>
