--- a/miniprogram/pages/market/market.wxss
+++ b/miniprogram/pages/market/market.wxss
@@ -51,3 +51,27 @@
     background-color: #fff;
 }
 
+/*底部弹窗开始 -使屏幕变暗  */
+.coverview_screen {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: #000;
+    opacity: 0.2;
+    overflow: hidden;
+    z-index: 1000;
+    color: #fff;
+}
+
+.coverview_box {
+    width: 100%;
+    height: 760rpx;
+    overflow: hidden;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    z-index: 2000;
+    padding-top: 0rpx;
+}
