--- a/miniprogram/pages/market/market.wxml
+++ b/miniprogram/pages/market/market.wxml
@@ -1,14 +1,14 @@
 <!-- pages/market/market.wxml -->
 <view class="container" hover-class="none" hover-stop-propagation="false">
-    <map id="myMap" style="width: 100%; height: 100vh;" show-location show-scale bindcontroltap="controltap" bindmarkertap="markertap" longitude="{{longitude}}" latitude="{{latitude}}" scale="{{scale}}" markers="{{markers}}">
+    <map id="myMap" style="width: 100%; height: {{maph}}vh;" show-location show-scale bindtap="hideModal" bindmarkertap="markertap" longitude="{{longitude}}" latitude="{{latitude}}" scale="{{scale}}" markers="{{markers}}">
         <cover-view class="add_marker_view" scroll-top="0">
             <cover-image class="add_marker_img" src="../../images/bj2.png" bindtap="addMarker"></cover-image>
             <cover-view class="add_marker_view_view" scroll-top="0">添加标记</cover-view>
         </cover-view>
         <!-- 屏幕背景变暗的背景 -->
-        <cover-view class="coverview_screen" bindtap="hideModal" wx:if="{{showModalStatus}}"></cover-view>
+        <!-- <cover-view class="coverview_screen" bindtap="hideModal" wx:if="{{showModalStatus}}"></cover-view> -->
     </map>
-    <cover-view animation="{{animationData}}" class="coverview_box" wx:if="{{showModalStatus}}">
+    <view animation="{{animationData}}" class="coverview_box" wx:if="{{showModalStatus}}">
         <view class="messageTip">
             <form report-submit="true" bindsubmit="formSubmit" bindreset="formReset">
                 <view class="input-content">
@@ -31,5 +31,5 @@
                 <button class="form_submit" formType="submit" type="primary">提交表单</button>
             </form>
         </view>
-    </cover-view>
+    </view>
 </view>
