--- a/miniprogram/pages/market/market.wxss
+++ b/miniprogram/pages/market/market.wxss
@@ -54,7 +54,7 @@
 /*底部弹窗开始 -使屏幕变暗  */
 .coverview_screen {
     width: 100%;
-    height: 100%;
+    height: 31vh;
     position: fixed;
     top: 0;
     left: 0;
