--- a/miniprogram/pages/market/market.wxml
+++ b/miniprogram/pages/market/market.wxml
@@ -1,12 +1,12 @@
 <!-- pages/market/market.wxml -->
 <view class="container" hover-class="none" hover-stop-propagation="false">
-    <map id="myMap" style="width: 100%; height: {{maph}}vh;" show-location show-scale bindtap="hideModal" bindmarkertap="markertap" longitude="{{longitude}}" latitude="{{latitude}}" scale="{{scale}}" markers="{{markers}}">
-        <cover-view class="add_marker_view" scroll-top="0">
-            <cover-image class="add_marker_img" src="../../images/bj2.png" bindtap="addMarker"></cover-image>
-            <cover-view class="add_marker_view_view" scroll-top="0">添加标记</cover-view>
-        </cover-view>
+    <map id="myMap" style="width: 100%; height: 100vh;" show-location show-scale bindtap="hideModal" bindmarkertap="markertap" longitude="{{longitude}}" latitude="{{latitude}}" scale="{{scale}}" markers="{{markers}}">
+        <view class="add_marker_view" scroll-top="0">
+            <image class="add_marker_img" src="../../images/bj2.png" bindtap="addMarker"></image>
+            <view class="add_marker_view_view" scroll-top="0">添加标记</view>
+        </view>
         <!-- 屏幕背景变暗的背景 -->
-        <!-- <cover-view class="coverview_screen" bindtap="hideModal" wx:if="{{showModalStatus}}"></cover-view> -->
+        <view class="coverview_screen" bindtap="hideModal" wx:if="{{showModalStatus}}"></view>
     </map>
     <view animation="{{animationData}}" class="coverview_box" wx:if="{{showModalStatus}}">
         <view class="messageTip">
@@ -29,6 +29,11 @@
                     </picker>
                 </view>
                 <button class="form_submit" formType="submit" type="primary">提交表单</button>
+                <view class="share_marker" hover-class="none" hover-stop-propagation="false">
+                    <image class="share_marker_img" src="../../images/fx1.png"></image>
+                    <text class="share_marker_text">分享标记点</text>
+                    <button open-type="share" data-longitude="{{ longitude }}" data-latitude="{{ latitude }}" data-title="{{address}}"></button>
+                </view>
             </form>
         </view>
     </view>
